# 23202-Korsakov-OOP-CPP

./: .clang-format  README.md
task-0/: CMakeLists.txt  input.txt  output.csv  word_count.cpp
task-0/Google_tests/: CMakeLists.txt  FileReaderTest.cpp  FileWriterTest.cpp  ParserTest.cpp  StatisticTest.cpp
task-0/Google_tests/googletest/: CMakeLists.txt
task-0/src/: CMakeLists.txt  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Parser.cpp  Parser.h  Statistic.cpp  Statistic.h
task-1/: BitArray.cpp  BitArray.h  CMakeLists.txt
task-1/Google_tests/: BitArrayTest.cpp  CMakeLists.txt
task-1/src/: CMakeLists.txt
task-2/: CMakeLists.txt  main.cpp
task-2/Google_tests/: CMakeLists.txt  GameMechanicsTest.cpp
task-2/Universes/: GliderGun.txt  Pulsar.txt  SimpleGlider.txt
task-2/src/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Game.cpp  Game.h  Grid.cpp  Grid.h  Universe.cpp  Universe.h  UniverseLoader.cpp  UniverseLoader.h  UniverseSaver.cpp  UniverseSaver.h
task-3/: CMakeLists.txt  main.cpp
task-3/WAV_FILES/: config.TXT
task-3/src/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  ConsoleParser.cpp  ConsoleParser.h  Converter.h  ConverterFactory.cpp  ConverterFactory.h  Converters.cpp  Converters.h  ConvertersController.cpp  ConvertersController.h  ExceptionHandler.h  HelpGenerator.cpp  HelpGenerator.h  MixConverter.cpp  MixConverter.h  MuteConverter.cpp  MuteConverter.h  SoundProcessor.cpp  SoundProcessor.h  WAVReader.cpp  WAVReader.h  WAVWriter.cpp  WAVWriter.h
task-4/: CMakeLists.txt  CSVParser.h  TuplePrinter.h  main.cpp
