#project(Google_tests)
#add_subdirectory(googletest)
#include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
#add_executable(Google_Tests_run StatisticTest.cpp FileReaderTest.cpp FileWriterTest.cpp ParserTest.cpp)
#target_link_libraries(Google_Tests_run ${CMAKE_PROJECT_NAME}_lib)
#target_link_libraries(Google_Tests_run gtest gtest_main)
